force-app/main/default/objects/Events__c/fields/External_Accepted__c.field-meta.xml
<CustomField>
    <fullName>External_Accepted__c</fullName>
    <description>How Many Accepted The Invitation</description>
    <label>Accepted</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>