force-app/main/default/objects/Events__c/fields/External_Declined__c.field-meta.xml
<CustomField>
    <fullName>External_Declined__c</fullName>
    <description>Invited Attendees that have declined</description>
    <label>Declined</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>