force-app/main/default/objects/Events__c/fields/External_Invited__c.field-meta.xml
<CustomField>
    <fullName>External_Invited__c</fullName>
    <inlineHelpText>Invited Customers That Have Not Yet Accepted Or Declined</inlineHelpText>
    <label>Invited (Not Responded)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>