force-app/main/default/objects/Events__c/fields/Hospitality_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hospitality_Notes__c</fullName>
    <description>Oct 25&apos; visible on selection of &quot;Club Wembley&quot;</description>
    <label>Hospitality Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>