force-app/main/default/objects/Events__c/fields/Hospitality_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Hospitality_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Oct 25&apos; relies on the &quot;Club Wembley&quot; selection.</description>
    <label>Hospitality Ordered</label>
    <type>Checkbox</type>
</CustomField>