force-app/main/default/objects/Events__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <description>Host Of The Event</description>
    <label>Host</label>
    <length>80</length>
    <type>Text</type>
</CustomField>