force-app/main/default/objects/Events__c/fields/Hotel_Booked__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Booked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has a hotel been booked for this event?</inlineHelpText>
    <label>Hotel Booked</label>
    <type>Checkbox</type>
</CustomField>