force-app/main/default/objects/Events__c/fields/Hotel_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Notes__c</fullName>
    <description>Accommodation Booking Notes For The Event</description>
    <label>Hotel Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>