force-app/main/default/objects/Events__c/fields/Hotel_Requested__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Has a application been sent to Nautalia?</inlineHelpText>
    <label>Hotel Requested</label>
    <type>Checkbox</type>
</CustomField>