force-app/main/default/objects/Events__c/fields/No_of_Nominees__c.field-meta.xml
<CustomField>
    <fullName>No_of_Nominees__c</fullName>
    <label>No. of Nominees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>