force-app/main/default/objects/Events__c/fields/Number_Of_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Tickets__c</fullName>
    <description>Number Of Tickets Available For The Event</description>
    <inlineHelpText>Number Of Tickets Available For The Event</inlineHelpText>
    <label>Number Of Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>