force-app/main/default/objects/Events__c/fields/Remaining_Tickets__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Tickets__c</fullName>
    <description>Calculates how many tickets are still available</description>
    <formula>Number_Of_Tickets__c - External_Accepted__c - External_Invited__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>How many tickets are still available after acceptances and still pending invitations</inlineHelpText>
    <label>Remaining Tickets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>