force-app/main/default/objects/Events__c/fields/Restaurant_Notes__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Notes__c</fullName>
    <description>Restaurant Notes</description>
    <label>Restaurant Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>