force-app/main/default/objects/Events__c/fields/SAP_Material_Group__c.field-meta.xml
<CustomField>
    <fullName>SAP_Material_Group__c</fullName>
    <label>SAP Material Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SD450 Customer Entertainment</fullName>
            </value>
            <value>
                <fullName>SC500 Trade Events</fullName>
            </value>
            <value>
                <fullName>SD700 Sponsorship/Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>