force-app/main/default/objects/Events__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <description>Supplier Of The Event</description>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Supplier</valueSetName>
    </valueSet>
</CustomField>