force-app/main/default/objects/Events__c/fields/Ticket_received_issued__c.field-meta.xml
<CustomField>
    <fullName>Ticket_received_issued__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tickets have been received and distributed</inlineHelpText>
    <label>Ticket received &amp; issued</label>
    <type>Checkbox</type>
</CustomField>