force-app/main/default/objects/Events__c/fields/Transport_Notes__c.field-meta.xml
<CustomField>
    <fullName>Transport_Notes__c</fullName>
    <description>Transport Notes For The Event</description>
    <label>Transport Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>