force-app/main/default/objects/Events__c/listViews/Copy_of_Events_2024_RT.listView-meta.xml
<ListView>
    <fullName>Copy_of_Events_2024_RT</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Host__c</columns>
    <columns>Status__c</columns>
    <columns>Number_Of_Tickets__c</columns>
    <columns>No_of_Nominees__c</columns>
    <columns>External_Invited__c</columns>
    <columns>External_Accepted__c</columns>
    <columns>Remaining_Tickets__c</columns>
    <columns>Ticket_received_issued__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>1/1/2025</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>lessThan</operation>
        <value>1/1/2026</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>Events 2025 - RT</label>
    <sharedTo>
        <role>Encirc_UK_Sales_Director</role>
    </sharedTo>
</ListView>