force-app/main/default/objects/Events__c/listViews/Events_2024.listView-meta.xml
<ListView>
    <fullName>Events_2024</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Host__c</columns>
    <columns>Status__c</columns>
    <columns>Number_Of_Tickets__c</columns>
    <columns>No_of_Nominees__c</columns>
    <columns>External_Invited__c</columns>
    <columns>External_Accepted__c</columns>
    <columns>Remaining_Tickets__c</columns>
    <columns>Hotel_Booked__c</columns>
    <columns>Ticket_received_issued__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>5/25/2024</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>lessThan</operation>
        <value>1/1/2025</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Booked,Planned,Cancelled,Postponed</value>
    </filters>
    <label>Events 2024</label>
</ListView>